# meetup-gmail-calendar-sync

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: markster-pre-commit.yml  secrets-scan.yml
scripts/: install_launchd.sh
src/meetup_gmail_calendar_sync/: __init__.py  auth.py  calendar_client.py  cli.py  config.py  gmail_client.py  ics_parser.py  sync.py
tests/: test_auth.py  test_ics_parser.py
